<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_margin="34dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="12dp"
        app:cardCornerRadius="12dp"
        android:background="#720d00">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="#720d00"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/geo_title"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/geo_lat"
                android:textSize="25sp"
                android:textColor="#e69407" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/latitude"
                android:background="#fc5a35"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/geo_long"
                android:textSize="25sp"
                android:textColor="#e69407"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/longitude"
                android:background="#fc5a35" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/geo_ricarica"
                android:onClick="ricarica_coords"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>