<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/porcino2"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/listgrad"
        android:elevation="28dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:textColor="#eeeeee"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:shadowColor="#011c04"
            android:shadowDx="0"
            android:shadowDy="6"
            android:shadowRadius="9"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="2dp"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif"
            android:text="@string/fm_canctutti"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="#011c04"
            android:gravity="center"

            />

        <Button
            android:id="@+id/cmd_man_deleteall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_1"
            android:fontFamily="sans-serif"
            android:layout_weight="1"
            android:onClick="deleteall"
            android:text="@string/fm_btncanctutti"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="40dp"
        android:layout_weight="2"
        android:gravity="top"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif"
            android:text="@string/fm_seleziona"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="#011c04"
            android:gravity="center"
            />


        <!-- ********* PERIODO ********-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:fontFamily="sans-serif"
                android:text="@string/fm_da"
                android:textColor="#FFFFFF"
                android:textSize="16dp"
                android:textStyle="bold"
                android:shadowColor="#000f02"
                android:shadowDx="1"
                android:shadowDy="6"
                android:shadowRadius="6"
                android:layout_weight="1"
                />

            <EditText
                android:id="@+id/man_date_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginRight="2dp"
                android:inputType="datetime"
                android:background="#FFFFFF"
                android:textColor="#313131"
                android:textSize="15dp"
                android:layout_weight="2"

                android:focusableInTouchMode="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                />

            <ImageButton
                android:id="@+id/man_cal_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/my_calendar"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:fontFamily="sans-serif"
                android:text="@string/fm_a"
                android:textColor="#FFFFFF"
                android:textSize="16dp"
                android:textStyle="bold"
                android:shadowColor="#000f02"
                android:shadowDx="1"
                android:shadowDy="6"
                android:shadowRadius="6"
                android:layout_weight="1"
                />

            <EditText
                android:id="@+id/man_date_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:inputType="datetime"
                android:background="#FFFFFF"
                android:textColor="#313131"
                android:textSize="15dp"
                android:layout_weight="2"
                android:layout_marginRight="2dp"

                android:focusableInTouchMode="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                />

            <ImageButton
                android:id="@+id/man_cal_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/my_calendar"
                android:layout_marginTop="0dp"
                />
        </LinearLayout>
        <!-- **************************************-->

        <!-- *********** TIPO RITROVAMENTO ********-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:fontFamily="sans-serif"
                android:text="@string/fm_tipo"
                android:textColor="#FFFFFF"
                android:textSize="16dp"
                android:textStyle="bold"
                android:shadowColor="#000f02"
                android:shadowDx="1"
                android:shadowDy="6"
                android:shadowRadius="6" />

            <Spinner
                android:id="@+id/man_search_tipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:background="#FFFFFF"
                android:fontFamily="sans-serif"
                android:spinnerMode="dropdown"
                android:textSize="14dp" />
        </LinearLayout>
        <!-- **************************************-->

        <!-- *********** VALUTAZIONE ********-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:fontFamily="sans-serif"
                android:text="@string/fm_valutazione"
                android:textColor="#FFFFFF"
                android:textSize="16dp"
                android:textStyle="bold"
                android:shadowColor="#000f02"
                android:shadowDx="1"
                android:shadowDy="6"
                android:shadowRadius="6" />

            <Spinner
                android:id="@+id/man_valutazione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:background="#FFFFFF"
                android:fontFamily="sans-serif"
                android:spinnerMode="dropdown"
                android:textSize="14dp" />
        </LinearLayout>
        <!-- **************************************-->


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_3"
            android:fontFamily="sans-serif"
            android:onClick="deleteDetails"
            android:text="@string/fm_btncancsel"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/cmd_man_chiudi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_4"
            android:fontFamily="sans-serif"
            android:onClick="chiudi1"
            android:text="@string/fm_chiudi"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"

            />

    </LinearLayout>
</LinearLayout>