<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/porcino"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/listgrad"
        android:elevation="28dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:textColor="#eeeeee"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:shadowColor="#011c04"
            android:shadowDx="0"
            android:shadowDy="6"
            android:shadowRadius="9"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:elevation="28dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:elevation="28dp"
                android:layout_marginTop="30dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_username"
                    android:textSize="25sp"
                    android:textColor="#011c04"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:shadowColor="@color/white"
                    android:shadowDx="1"
                    android:shadowDy="6"
                    android:shadowRadius="4"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/username"
                    android:background="#eeeeee"
                    android:textSize="20sp"
                    android:padding="8dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:elevation="28dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_pwd"
                    android:textSize="25sp"
                    android:textColor="#011c04"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:shadowColor="@color/white"
                    android:shadowDx="1"
                    android:shadowDy="6"
                    android:shadowRadius="4"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:background="#eeeeee"
                    android:textSize="20sp"
                    android:padding="8dp"
                    />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_ok"
                android:textSize="25sp"
                android:id="@+id/login_button_ok"
                android:background="@drawable/loginbutton"
                android:textColor="#FFFFFF"
                android:padding="5dp"
                android:layout_margin="30dp"
                />

        </LinearLayout>


</LinearLayout>